Correcion nombres de variables

--- a/Grafico/PaginaPresentacion.form
+++ b/Grafico/PaginaPresentacion.form
@@ -144,7 +144,7 @@
             </constraints>
             <properties>
               <font name="Bell MT" size="24"/>
-              <text value="Victo Villareal 8-1016-1917"/>
+              <text value="Victor Villareal 8-1016-1917"/>
             </properties>
           </component>
           <component id="29fb1" class="javax.swing.JLabel">
