--- a/Grafico/Stocks.form
+++ b/Grafico/Stocks.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.Stocks">
-  <grid id="27dc6" binding="StocksPanel" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="stocks_panel" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="425" y="173" width="932" height="1025"/>
@@ -21,7 +21,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="d6de" class="javax.swing.JButton" binding="menuPrincipalButton" default-binding="true">
+          <component id="d6de" class="javax.swing.JButton" binding="menu_principal_button" default-binding="true">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -31,7 +31,7 @@
               <text value="Menu Principal"/>
             </properties>
           </component>
-          <component id="76ffd" class="javax.swing.JButton" binding="cuentaBancariaButton" default-binding="true">
+          <component id="76ffd" class="javax.swing.JButton" binding="cuenta_bancaria_button" default-binding="true">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -41,7 +41,7 @@
               <text value="Cuenta Bancaria"/>
             </properties>
           </component>
-          <component id="f847c" class="javax.swing.JButton" binding="prestamosButton" default-binding="true">
+          <component id="f847c" class="javax.swing.JButton" binding="prestamos_button" default-binding="true">
             <constraints>
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -51,7 +51,7 @@
               <text value="Prestamos"/>
             </properties>
           </component>
-          <component id="d6b7" class="javax.swing.JButton" binding="tarjetasDeCreditoButton" default-binding="true">
+          <component id="d6b7" class="javax.swing.JButton" binding="tarjetas_credito_button" default-binding="true">
             <constraints>
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -71,7 +71,7 @@
               <text value="Stocks"/>
             </properties>
           </component>
-          <component id="3a313" class="javax.swing.JButton" binding="plazoFijosButton" default-binding="true">
+          <component id="3a313" class="javax.swing.JButton" binding="plazos_fijos_button" default-binding="true">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -81,7 +81,7 @@
               <text value="Plazo Fijos"/>
             </properties>
           </component>
-          <component id="a24f4" class="javax.swing.JButton" binding="ingresosYGastosButton" default-binding="true">
+          <component id="a24f4" class="javax.swing.JButton" binding="ingresos_y_gastos_button" default-binding="true">
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -204,7 +204,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="88f19" class="javax.swing.JTextField" binding="tfSimbolo">
+          <component id="88f19" class="javax.swing.JTextField" binding="tf_simbolo">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -212,7 +212,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="837b0" class="javax.swing.JTextField" binding="ftCantidad" default-binding="true">
+          <component id="837b0" class="javax.swing.JTextField" binding="fr_cantidad" default-binding="true">
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -228,7 +228,7 @@
               <text value="Cantidad"/>
             </properties>
           </component>
-          <component id="42bd1" class="javax.swing.JTextField" binding="tfPrecioCompra">
+          <component id="42bd1" class="javax.swing.JTextField" binding="tf_precio_compra">
             <constraints>
               <grid row="7" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -236,7 +236,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="8c342" class="javax.swing.JTextField" binding="tfNombreEmpresa">
+          <component id="8c342" class="javax.swing.JTextField" binding="tf_nombre_empresa">
             <constraints>
               <grid row="9" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="13"/>
@@ -244,7 +244,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="e9c74" class="javax.swing.JTextField" binding="tfDividendoAccion">
+          <component id="e9c74" class="javax.swing.JTextField" binding="tf_dividendo_accion">
             <constraints>
               <grid row="11" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -268,7 +268,7 @@
               <text value="Descripción"/>
             </properties>
           </component>
-          <component id="84feb" class="javax.swing.JTextField" binding="tfDescripcion">
+          <component id="84feb" class="javax.swing.JTextField" binding="tf_descripcion">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -299,7 +299,7 @@
               <grid row="3" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <grid id="72084" binding="datePanelContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="72084" binding="date_panel_container" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -340,7 +340,7 @@
           </component>
         </children>
       </grid>
-      <component id="69489" class="javax.swing.JButton" binding="agregarNuevoStockButton" default-binding="true">
+      <component id="69489" class="javax.swing.JButton" binding="agregar_nuevo_stock_button" default-binding="true">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -381,7 +381,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="8de03" class="javax.swing.JTable" binding="tablaStocks">
+              <component id="8de03" class="javax.swing.JTable" binding="tabla_stocks">
                 <constraints/>
                 <properties>
                   <autoResizeMode value="0"/>
