--- a/Grafico/Stocks.form
+++ b/Grafico/Stocks.form
@@ -61,7 +61,7 @@
               <text value="Tarjetas de Credito"/>
             </properties>
           </component>
-          <component id="c33d4" class="javax.swing.JButton" binding="stocksButton" default-binding="true">
+          <component id="c33d4" class="javax.swing.JButton" binding="stocks_button">
             <constraints>
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -196,7 +196,7 @@
               <text value="Frecuencia Dividendos"/>
             </properties>
           </component>
-          <component id="dbad1" class="javax.swing.JTextField" binding="tfNombre">
+          <component id="dbad1" class="javax.swing.JTextField" binding="tf_nombre">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
