--- a/Grafico/InicioSesion.form
+++ b/Grafico/InicioSesion.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.InicioSesion">
-  <grid id="27dc6" binding="LoginPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="login_panel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="889" height="620"/>
@@ -91,7 +91,7 @@
               <text value="Correo"/>
             </properties>
           </component>
-          <component id="40af0" class="javax.swing.JTextField" binding="tfCorreo">
+          <component id="40af0" class="javax.swing.JTextField" binding="tf_correo">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -110,7 +110,7 @@
               <text value="Contraseña"/>
             </properties>
           </component>
-          <component id="92920" class="javax.swing.JPasswordField" binding="pfContrasena">
+          <component id="92920" class="javax.swing.JPasswordField" binding="pf_contrasena">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -133,7 +133,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="5829b" class="javax.swing.JButton" binding="btnIniciarSesion">
+          <component id="5829b" class="javax.swing.JButton" binding="btn_iniciar_sesion">
             <constraints>
               <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -143,7 +143,7 @@
               <text value="Iniciar Sesion"/>
             </properties>
           </component>
-          <component id="1364f" class="javax.swing.JButton" binding="btnRegistrarse">
+          <component id="1364f" class="javax.swing.JButton" binding="btn_registrar_sesion">
             <constraints>
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
