--- a/Grafico/ConsultarMovimientos.form
+++ b/Grafico/ConsultarMovimientos.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.ConsultarMovimientos">
-  <grid id="27dc6" binding="MovPanel" layout-manager="GridLayoutManager" row-count="8" column-count="22" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="movimiento_panel" layout-manager="GridLayoutManager" row-count="8" column-count="22" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="1057" height="535"/>
@@ -84,7 +84,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="91dee" class="javax.swing.JButton" binding="Volverbtn">
+      <component id="91dee" class="javax.swing.JButton" binding="volver_btn">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -105,7 +105,7 @@
           <text value="Movimiento de Cuentas"/>
         </properties>
       </component>
-      <component id="4974f" class="javax.swing.JTable" binding="movimientosTable">
+      <component id="4974f" class="javax.swing.JTable" binding="movimientos_table">
         <constraints>
           <grid row="5" column="7" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
@@ -113,7 +113,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="6bde2" class="javax.swing.JButton" binding="btnBuscar">
+      <component id="6bde2" class="javax.swing.JButton" binding="btn_buscar">
         <constraints>
           <grid row="3" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
