--- a/Grafico/CuentaBancariaG.form
+++ b/Grafico/CuentaBancariaG.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.CuentaBancariaG">
-  <grid id="27dc6" binding="CuentaBancoPanel" layout-manager="GridLayoutManager" row-count="5" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="cuenta_banco_panel" layout-manager="GridLayoutManager" row-count="5" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="733" height="563"/>
@@ -31,7 +31,7 @@
               <text value="Página Principal"/>
             </properties>
           </component>
-          <component id="4c0ea" class="javax.swing.JButton" binding="prestamosButton" default-binding="true">
+          <component id="4c0ea" class="javax.swing.JButton" binding="prestamos_button" default-binding="true">
             <constraints>
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -41,7 +41,7 @@
               <text value="Prestamos"/>
             </properties>
           </component>
-          <component id="e576" class="javax.swing.JButton" binding="tarjetasDeCreditoButton" default-binding="true">
+          <component id="e576" class="javax.swing.JButton" binding="tarjetas_creditos_button" default-binding="true">
             <constraints>
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -51,7 +51,7 @@
               <text value="Tarjetas de Credito"/>
             </properties>
           </component>
-          <component id="2d147" class="javax.swing.JButton" binding="stocksButton" default-binding="true">
+          <component id="2d147" class="javax.swing.JButton" binding="stocks_button" default-binding="true">
             <constraints>
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -61,7 +61,7 @@
               <text value="Stocks"/>
             </properties>
           </component>
-          <component id="cd3a9" class="javax.swing.JButton" binding="ingresosYGastosButton" default-binding="true">
+          <component id="cd3a9" class="javax.swing.JButton" binding="ingresos_y_gastos_button" default-binding="true">
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -163,7 +163,7 @@
           <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="5fc98" class="javax.swing.JButton" binding="btnAgregarCuenta">
+      <component id="5fc98" class="javax.swing.JButton" binding="btn_agregar_cuenta">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -186,7 +186,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="d94bc" class="javax.swing.JButton" binding="consultarMovimientosButton" default-binding="true">
+      <component id="d94bc" class="javax.swing.JButton" binding="consulta_movimiento_button" default-binding="true">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
