--- a/Grafico/Dashboard.form
+++ b/Grafico/Dashboard.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.Dashboard">
-  <grid id="27dc6" binding="DashboardPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="dashborad_panel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="960" height="920"/>
@@ -36,7 +36,7 @@
               <text value="Página Principal"/>
             </properties>
           </component>
-          <component id="d1081" class="javax.swing.JButton" binding="btnCuentaBancaria">
+          <component id="d1081" class="javax.swing.JButton" binding="btn_cuenta_bancaria">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -46,7 +46,7 @@
               <text value="Cuenta Bancaria"/>
             </properties>
           </component>
-          <component id="22327" class="javax.swing.JButton" binding="plazosFijosButton" default-binding="true">
+          <component id="22327" class="javax.swing.JButton" binding="plazos_fijos_button" default-binding="true">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -56,7 +56,7 @@
               <text value="Plazos Fijos"/>
             </properties>
           </component>
-          <component id="daa1b" class="javax.swing.JButton" binding="btnStocks">
+          <component id="daa1b" class="javax.swing.JButton" binding="btn_stocks">
             <constraints>
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -66,7 +66,7 @@
               <text value="Stocks"/>
             </properties>
           </component>
-          <component id="b4e71" class="javax.swing.JButton" binding="btnTarjetas">
+          <component id="b4e71" class="javax.swing.JButton" binding="btn_tarjeta">
             <constraints>
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -76,7 +76,7 @@
               <text value="Tarjetas de Credito"/>
             </properties>
           </component>
-          <component id="8a84f" class="javax.swing.JButton" binding="prestamosButton">
+          <component id="8a84f" class="javax.swing.JButton" binding="prestamos_button">
             <constraints>
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -101,7 +101,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="9c0c2" class="javax.swing.JButton" binding="btnIngresos">
+          <component id="9c0c2" class="javax.swing.JButton" binding="btn_ingreso">
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
